--- a/RPS.html
+++ b/RPS.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="functions.js"></script>
+    <script type="text/javascript" src="functions.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="Result"></div>
+    <button id="Rock">Rock</button>
+    <button id="Paper">Paper</button>
+    <button id="Scissors">Scissors</button>
 </body>
 </html>
