--- a/RPS.html
+++ b/RPS.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="Games"></div>
+    <div class="Counter">0 | 0</div>
     <div class="Result"></div>
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</button>
